--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-server.port 
-
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jjdbc:mysql://localhost:3306/proyecto_final
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:33060/ventas
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=123456
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
